<resources>
    <string name="app_name">Reaction Game</string>
    <string name="singleButton">One Player Game</string>
    <string name="multiButton">Two Player Game</string>
    <string name="highScoresButton">High Scores</string>

    <string name="redButton">Get Ready</string>
    <string name="greenButton">Go</string>
    <string name="tooEarly">Pressed too early. Press to restart.</string>
    <string name="playAgain">Play Again</string>

    <string name="redButton1" translatable="false">Get Ready Player 1</string>
    <string name="redButton2">Get Ready Player 2</string>
    <string name="greenButton1">Go</string>
    <string name="greenButton2">Go</string>
    <string name="tooEarly1">Pressed too early. Player 2 wins. Press to restart.</string>
    <string name="tooEarly2">Pressed too early. Player 1 wins. Press to restart.</string>
    <string name="winner1">Player 1 wins. Press to play again.</string>
    <string name="winner2">Player 2 wins. Press to play again.</string>
    <string name="newHighScores">0 0 0 0 0 0 0 0 0 0</string>
</resources>
