<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/redButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red"
        android:text="@string/redButton"
        tools:visibility="visible" />

    <Button
        android:id="@+id/tooEarly"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red"
        android:text="@string/tooEarly"
        tools:visibility="gone" />

    <Button
        android:id="@+id/greenButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green"
        android:text="@string/greenButton"
        android:visibility="gone" />

    <TextView
        android:id="@+id/winTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/playAgain"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="106dp"
            android:layout_marginLeft="106dp"
            android:layout_marginEnd="106dp"
            android:layout_marginRight="106dp"
            android:text="@string/playAgain"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>