<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/redButton1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:text="@string/redButton"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/redButton2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:text="@string/redButton"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/tooEarly1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/tooEarly"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="gone" />

        <Button
            android:id="@+id/tooEarly2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/tooEarly"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="gone" />

        <Button
            android:id="@+id/greenButton1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/greenButton"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="gone" />

        <Button
            android:id="@+id/greenButton2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/greenButton"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>